fix(weapon): 修复武器充能数值设置和动画播放速度问题
- 修复GunWeaponUtil中充能数值设置的边界检查方法
- 为IGunWeapon接口添加待实现注释
- 修复InputEventExecute中控制流的跳出语句逻辑
- 为MagicBulletWeaponItem添加动画播放速度参数
- 修正RationalityModifyEvent中的注释错误
- 为TextParticle添加待修复显示问题注释